Added hero image with correct gradient overlay and hero text.

--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
         </nav>
     </div>
 </div>
-<div class="row">
-    <div class="col-12 container-fluid hero-image">
+<div class="container-fluid hero-image">
+    <div class="row align-items-center">
+        <div class="col-12 hero-text">Kim van Leeuwen<br>Nomnivore<br>Freelance Kok & Pattisier</div>
     </div>
 </div>
 <script src="https://kit.fontawesome.com/72709fc3c4.js" crossorigin="anonymous"></script>
