Added profile pic, footer, and also media queries for better responsive behaviour.

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <title>Nomnivore</title>
 </head>
 <body>
-<div class="row">
+<!-- Navigation bar -->
+<div class="row container-fluid">
     <div class="col-12 nav-background">
-        <nav class="navbar navbar-expand-sm fixed-top navbar-light bg-light">
+        <nav class="navbar navbar-expand-md fixed-top navbar-light bg-light">
         <a class="navbar-brand" href="index.html">Nomnivore</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -31,11 +32,18 @@
         </nav>
     </div>
 </div>
+<!-- Hero section -->
 <div class="container-fluid hero-image">
     <div class="row align-items-center">
-        <div class="col-12 hero-text">Kim van Leeuwen<br>Nomnivore<br>Freelance Kok & Pattisier</div>
+        <div class="col hero-text"><div class="profile-pic"></div>Kim van Leeuwen<br>Nomnivore<br>Freelance Kok & Pattisier</div>
     </div>
 </div>
+<!-- footer section -->
+<footer>
+    <div class="row container-fluid">
+        <div class="col fixed-bottom footer-background"></div>
+    </div>
+</footer>
 <script src="https://kit.fontawesome.com/72709fc3c4.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
