--- a/index.html
+++ b/index.html
@@ -35,13 +35,54 @@
 <!-- Hero section -->
 <div class="container-fluid hero-image">
     <div class="row align-items-center">
-        <div class="col hero-text"><div class="profile-pic"></div>Kim van Leeuwen<br>Nomnivore<br>Freelance Kok & Pattisier</div>
+        <div class="col">
+            <h1 class="hero-text">Kim van Leeuwen<br>Nomnivore<br>Freelance Kok & Pattisier</h1>
+            <div class="profile-pic"></div>
+        </div>
     </div>
 </div>
 <!-- footer section -->
-<footer>
-    <div class="row container-fluid">
-        <div class="col fixed-bottom footer-background"></div>
+<footer class="container-fluid">
+    <div class="row fixed-bottom footer-background">
+        <div class="col copyright">Copyright Joris Paardekooper</div>
+        <div class="col-sm-auto">
+            <ul class="list-inline social-links">
+            <li class="list-inline-item">
+              <a
+                target="_blank"
+                href="https://www.facebook.com/joris.paardekooper"
+              >
+                <i class="fa fa-facebook facebook-logo" aria-hidden="true"></i>
+                <span class="sr-only">Facebook</span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a target="_blank" href="https://twitter.com/jorispaarde">
+                <i class="fa fa-twitter" aria-hidden="true"></i>
+                <span class="sr-only">Twitter</span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a
+                target="_blank"
+                href="https://www.linkedin.com/in/joris-dominicus-adam-paardekooper-overman-536b505a/"
+              >
+                <i class="fa fa-linkedin" aria-hidden="true"></i>
+                <span class="sr-only">Linkedin</span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a
+                target="_blank"
+                href="https://www.youtube.com/channel/UC6L-3LRTvdsM6JtuVW9eGdw?view_as=subscriber"
+              >
+                <i class="fa fa-youtube youtube-logo" aria-hidden="true"></i>
+                <span class="sr-only">Youtube</span>
+              </a>
+            </li>
+            </ul>
+        </div>
+        </div>
     </div>
 </footer>
 <script src="https://kit.fontawesome.com/72709fc3c4.js" crossorigin="anonymous"></script>
