--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
 <div class="row container-fluid">
     <div class="col-12 nav-background">
         <nav class="navbar navbar-expand-md fixed-top navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">Nomnivore</a>
+        <a class="navbar-brand" href="index.html"><h1>Nomnivore</h1> </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link text-white" href="recepten.html">Recepten</a>
+                <a class="nav-link text-white" href="recepten.html"><p>Recepten</p></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-white" href="over-kim.html">Over Kim</a>
+                <a class="nav-link text-white" href="over-kim.html"><p>Over Kim</p></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-white" href="contact.html">Contact</a>
+                <a class="nav-link text-white" href="contact.html"><p>Contact</p></a>
             </li>
             </ul>
         </div>
