Added contact, recipies and about-kim pages. Added current link indication functonality to navbar.

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 <div class="row container-fluid">
     <div class="col-12 nav-background">
         <nav class="navbar navbar-expand-md fixed-top navbar-light bg-light">
-        <a class="navbar-brand current-link" href="index.html"><h1>Nomnivore</h1> </a>
+        <a class="navbar-brand text-white" href="index.html"><h1>Nomnivore</h1> </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -25,22 +25,15 @@
                 <a class="nav-link text-white" href="over-kim.html"><p>Over Kim</p></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-white" href="contact.html"><p>Contact</p></a>
+                <a class="nav-link current-link" href="contact.html"><p>Contact</p></a>
             </li>
             </ul>
         </div>
         </nav>
     </div>
 </div>
-<!-- Hero section -->
-<div class="container-fluid hero-image">
-    <div class="row align-items-center">
-        <div class="col">
-            <h1 class="hero-text">Kim van Leeuwen<br>Nomnivore<br>Freelance Kok & Pattisier</h1>
-            <div class="profile-pic"></div>
-        </div>
-    </div>
-</div>
+<!-- contact form section -->
+
 <!-- footer section -->
 <footer class="container-fluid">
     <div class="row fixed-bottom footer-background">
