--- a/over-kim.html
+++ b/over-kim.html
@@ -12,7 +12,7 @@
 <div class="row container-fluid">
     <div class="col-12 nav-background">
         <nav class="navbar navbar-expand-md fixed-top navbar-light bg-light">
-        <a class="navbar-brand current-link" href="index.html"><h1>Nomnivore</h1> </a>
+        <a class="navbar-brand text-white" href="index.html"><h1>Nomnivore</h1> </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -22,7 +22,7 @@
                 <a class="nav-link text-white" href="recepten.html"><p>Recepten</p></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-white" href="over-kim.html"><p>Over Kim</p></a>
+                <a class="nav-link current-link" href="over-kim.html"><p>Over Kim</p></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link text-white" href="contact.html"><p>Contact</p></a>
