--- a/recepten.html
+++ b/recepten.html
@@ -43,34 +43,25 @@
             <li class="list-inline-item">
               <a
                 target="_blank"
-                href="https://www.facebook.com/joris.paardekooper"
+                href="https://www.facebook.com/Nomnivore-105839921382834"
               >
                 <i class="fa fa-facebook facebook-logo" aria-hidden="true"></i>
                 <span class="sr-only">Facebook</span>
               </a>
             </li>
             <li class="list-inline-item">
-              <a target="_blank" href="https://twitter.com/jorispaarde">
-                <i class="fa fa-twitter" aria-hidden="true"></i>
-                <span class="sr-only">Twitter</span>
+              <a target="_blank" href="https://www.instagram.com/kimvnleeuwen/">
+                <i class="fa fa-instagram" aria-hidden="true"></i>
+                <span class="sr-only">Instagram</span>
               </a>
             </li>
             <li class="list-inline-item">
               <a
                 target="_blank"
-                href="https://www.linkedin.com/in/joris-dominicus-adam-paardekooper-overman-536b505a/"
+                href="https://www.linkedin.com/in/kimberley-van-leeuwen-33657998/"
               >
                 <i class="fa fa-linkedin" aria-hidden="true"></i>
                 <span class="sr-only">Linkedin</span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a
-                target="_blank"
-                href="https://www.youtube.com/channel/UC6L-3LRTvdsM6JtuVW9eGdw?view_as=subscriber"
-              >
-                <i class="fa fa-youtube youtube-logo" aria-hidden="true"></i>
-                <span class="sr-only">Youtube</span>
               </a>
             </li>
             </ul>
