Bug fixes to header and footer layout. See readme for details.

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
     </div>
 </div>
 <!-- footer section -->
-<footer class="container-fluid">
-    <div class="row fixed-bottom footer-background">
-        <div class="col copyright">Copyright Joris Paardekooper</div>
-        <div class="col-sm-auto">
+<footer class="container-fluid fixed-bottom">
+    <div class="row footer-background">
+        <div class="col copyright"><a target="_blank" href="https://www.linkedin.com/in/joris-dominicus-adam-paardekooper-overman-536b505a/">&copy; Joris Paardekooper</a></div>
+        <div class="col-xs-auto">
             <ul class="list-inline social-links">
             <li class="list-inline-item">
               <a
