Added contact button to homepage.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
             <li class="nav-item">
+                <a class="nav-link current-link" href="index.html"><p>Home</p></a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link text-white" href="recepten.html"><p>Recepten</p></a>
             </li>
             <li class="nav-item">
@@ -41,6 +44,15 @@
         </div>
     </div>
 </div>
+<!-- main content section -->
+<div class="container">
+    <div class="row">
+        <div class="col-12 align-self-center">
+            <a class="contact-button" href="contact.html">Contact</a> 
+        </div>
+    </div>
+</div>
+
 <!-- footer section -->
 <footer class="container-fluid fixed-bottom">
     <div class="row footer-background">
@@ -72,7 +84,6 @@
               </a>
             </li>
             </ul>
-        </div>
         </div>
     </div>
 </footer>
