--- a/recepten.html
+++ b/recepten.html
@@ -19,6 +19,9 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
             <li class="nav-item">
+                <a class="nav-link text-white" href="index.html"><p>Home</p></a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link current-link" href="recepten.html"><p>Recepten</p></a>
             </li>
             <li class="nav-item">
@@ -65,7 +68,6 @@
               </a>
             </li>
             </ul>
-        </div>
         </div>
     </div>
 </footer>
