Corrected navigation bar nesting. Now in correct order.

--- a/index.html
+++ b/index.html
@@ -9,30 +9,32 @@
 </head>
 <body>
 <!-- Navigation bar -->
-<div class="row container-fluid">
-    <div class="col-12 nav-background">
-        <nav class="navbar navbar-expand-md fixed-top navbar-light bg-light">
-        <a class="navbar-brand current-link" href="index.html"><h1>Nomnivore</h1> </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a class="nav-link current-link" href="index.html"><p>Home</p></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-white" href="recepten.html"><p>Recepten</p></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-white" href="over-kim.html"><p>Over Kim</p></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-white" href="contact.html"><p>Contact</p></a>
-            </li>
-            </ul>
+<div class="container-fluid nav-background">
+    <div class="row">
+        <div class="col-12">
+            <nav class="navbar navbar-expand-md fixed-top navbar-light bg-light">
+            <a class="navbar-brand current-link" href="index.html"><h1>Nomnivore</h1> </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link current-link" href="index.html"><p>Home</p></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="recepten.html"><p>Recepten</p></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="over-kim.html"><p>Over Kim</p></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="contact.html"><p>Contact</p></a>
+                </li>
+                </ul>
+            </div>
+            </nav>
         </div>
-        </nav>
     </div>
 </div>
 <!-- Hero section -->
