Added references and corrected placement contact button.

--- a/index.html
+++ b/index.html
@@ -46,11 +46,43 @@
         </div>
     </div>
 </div>
-<!-- main content section -->
-<div class="container">
+<!-- main content section call to action-->
+<div class="container-fluid">
     <div class="row">
-        <div class="col-12 align-self-center">
+        <div class="col-12 call-to-action">
             <a class="contact-button" href="contact.html">Contact</a> 
+        </div>
+    </div>
+</div>
+<!-- main content section references-->
+
+<div class="container">
+    <div class="row justify-content-md-center">
+        <div class="col-md-8 referentie">
+            <div class="row">
+                <div class="col-2">
+                <div class="referentie-logo-1"></div>
+                </div>
+                <div class="col-10 referentie-titel">Culinair centrum beverwijk</div>
+            </div>
+            <div class="row">
+                <div class="col-12 referentie-text"><p>Het is altijd plezierig met kim te werken.  Ze is proffesioneel prettig in de omgang en past zich snel aan. 
+                Een echte aanvulling aan het team.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-8 referentie">
+            <div class="row">
+                <div class="col-2">
+                <div class="referentie-logo-2"></div>
+                </div>
+                <div class="col-10 referentie-titel">Jeroen Goossens</div>
+            </div>
+            <div class="row">
+                <div class="col-12 referentie-text"><p>Ik stel altijd hoge eisen, aan mijn producten en mijn personeel.
+                Met Kim hoef ik me over beide nooit zorgen te maken.</p>
+                </div>
+            </div>
         </div>
     </div>
 </div>
