Added background decoration image.

--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
     </div>
 </div>
 <!-- main content section references-->
-
-<div class="container">
+<div class="container-fluid">
     <div class="row justify-content-md-center">
         <div class="col-md-8 referentie">
             <div class="row">
@@ -83,6 +82,11 @@
                 Met Kim hoef ik me over beide nooit zorgen te maken.</p>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12">
+            <div class="background-deco"></div>
         </div>
     </div>
 </div>
