Added text section and background image.

--- a/contact.html
+++ b/contact.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 <!-- Navigation bar -->
-<div class="row container-fluid">
+<nav class="row container-fluid">
     <div class="col-12 nav-background">
-        <nav class="navbar navbar-expand-md fixed-top navbar-light bg-light">
+        <div class="navbar navbar-expand-md fixed-top navbar-light bg-light">
         <a class="navbar-brand text-white" href="index.html"><h1>Nomnivore</h1> </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -31,11 +31,13 @@
                 <a class="nav-link current-link" href="contact.html"><p>Contact</p></a>
             </li>
             </ul>
-        </div>
-        </nav>
+        </div>     
     </div>
-</div>
-<!-- contact form section -->
+    </div>
+</nav>
+<!-- main content section -->
+
+<!-- contact form -->
 
 <!-- footer section -->
 <footer class="container-fluid fixed-bottom">
