--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
 <!-- Navigation bar -->
-<div class="container-fluid nav-background">
+<nav class="container-fluid nav-background">
     <div class="row">
         <div class="col-12">
-            <nav class="navbar navbar-expand-md fixed-top navbar-light bg-light">
+            <div class="navbar navbar-expand-md fixed-top navbar-light bg-light">
             <a class="navbar-brand current-link" href="index.html"><h1>Nomnivore</h1> </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -33,64 +33,68 @@
                 </li>
                 </ul>
             </div>
-            </nav>
+        </div>
         </div>
     </div>
-</div>
+</nav>
 <!-- Hero section -->
-<div class="container-fluid hero-image">
-    <div class="row align-items-center">
-        <div class="col">
-            <h1 class="hero-text">Kim van Leeuwen<br>Nomnivore<br>Freelance Kok & Pattisier</h1>
-            <div class="profile-pic"></div>
-        </div>
-    </div>
-</div>
-<!-- main content section call to action-->
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-12 call-to-action">
-            <a class="contact-button" href="contact.html">Contact</a> 
-        </div>
-    </div>
-</div>
-<!-- main content section references-->
-<div class="container-fluid">
-    <div class="row justify-content-md-center">
-        <div class="col-md-8 referentie">
-            <div class="row">
-                <div class="col-2">
-                <div class="referentie-logo-1"></div>
-                </div>
-                <div class="col-10 referentie-titel">Culinair centrum beverwijk</div>
-            </div>
-            <div class="row">
-                <div class="col-12 referentie-text"><p>Het is altijd plezierig met kim te werken.  Ze is proffesioneel prettig in de omgang en past zich snel aan. 
-                Een echte aanvulling aan het team.</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-8 referentie">
-            <div class="row">
-                <div class="col-2">
-                <div class="referentie-logo-2"></div>
-                </div>
-                <div class="col-10 referentie-titel">Jeroen Goossens</div>
-            </div>
-            <div class="row">
-                <div class="col-12 referentie-text"><p>Ik stel altijd hoge eisen, aan mijn producten en mijn personeel.
-                Met Kim hoef ik me over beide nooit zorgen te maken.</p>
-                </div>
+<section>
+    <div class="container-fluid hero-image">
+        <div class="row align-items-center">
+            <div class="col">
+                <h1 class="hero-text">Kim van Leeuwen<br>Nomnivore<br>Freelance Kok & Pattisier</h1>
+                <div class="profile-pic"></div>
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col-12">
-            <div class="background-deco"></div>
+</section>
+<!-- main content section-->
+<section>
+    <!-- call to action-->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12 call-to-action">
+                <a class="contact-button" href="contact.html">Contact</a> 
+            </div>
         </div>
     </div>
-</div>
-
+    <!-- references-->
+    <div class="container-fluid">
+        <div class="row justify-content-md-center">
+            <div class="col-md-8 referentie">
+                <div class="row">
+                    <div class="col-2">
+                    <div class="referentie-logo-1"></div>
+                    </div>
+                    <div class="col-10 referentie-titel">Culinair centrum beverwijk</div>
+                </div>
+                <div class="row">
+                    <div class="col-12 referentie-text"><p>Het is altijd plezierig met kim te werken.  Ze is proffesioneel prettig in de omgang en past zich snel aan. 
+                    Een echte aanvulling aan het team.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-8 referentie">
+                <div class="row">
+                    <div class="col-2">
+                    <div class="referentie-logo-2"></div>
+                    </div>
+                    <div class="col-10 referentie-titel">Jeroen Goossens</div>
+                </div>
+                <div class="row">
+                    <div class="col-12 referentie-text"><p>Ik stel altijd hoge eisen, aan mijn producten en mijn personeel.
+                    Met Kim hoef ik me over beide nooit zorgen te maken.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <div class="background-deco"></div>
+            </div>
+        </div>
+    </div>
+</section>
 <!-- footer section -->
 <footer class="container-fluid fixed-bottom">
     <div class="row footer-background">
