--- a/over-kim.html
+++ b/over-kim.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 <!-- Navigation bar -->
-<div class="row container-fluid">
+<nav class="row container-fluid">
     <div class="col-12 nav-background">
-        <nav class="navbar navbar-expand-md fixed-top navbar-light bg-light">
+        <div class="navbar navbar-expand-md fixed-top navbar-light bg-light">
         <a class="navbar-brand text-white" href="index.html"><h1>Nomnivore</h1> </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -32,18 +32,41 @@
             </li>
             </ul>
         </div>
-        </nav>
     </div>
-</div>
+    </div>
+</nav>
 <!-- Hero section -->
-<div class="container-fluid hero-image">
-    <div class="row align-items-center">
-        <div class="col">
-            <h1 class="hero-text">Kim van Leeuwen<br>Nomnivore<br>Freelance Kok & Pattisier</h1>
-            <div class="profile-pic"></div>
+<section>
+    <div class="container-fluid hero-image">
+        <div class="row align-items-center">
+            <div class="col">
+                <h1 class="hero-text">Kim van Leeuwen<br>Nomnivore<br>Freelance Kok & Pattisier</h1>
+                <div class="profile-pic"></div>
+            </div>
         </div>
     </div>
-</div>
+</section>
+<!-- main content section -->
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-2"></div>
+            <div class="col-md-8 text-block-over-kim">
+                <h2>Over mijn ervaring en opleiding</h2>
+                <p>Ik heb mijn patisserie opleiding gedaan in beverwijk. Donec vel justo velit. Nunc pulvinar dignissim aliquam. Donec at nibh ac justo pulvinar dictum ut a mi. Aenean ut nulla enim. Curabitur pretium porta ullamcorper. Vivamus ullamcorper est eu felis dignissim, a pharetra arcu vulputate. Curabitur vitae ultricies massa.</p>
+                <p>Als zelfstandig ondernemer catering bedrijf gehad. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sit amet faucibus urna, nec convallis tortor. Praesent convallis varius sodales. In ac libero vitae erat lacinia consectetur non sit amet dui. Cras ligula lectus, pharetra sed erat vitae, egestas rhoncus dolor. Curabitur a nisl vitae lorem convallis gravida. Donec blandit sed dui quis rutrum. Donec id elit tortor. Integer dignissim malesuada porttitor. Donec porta erat et mauris suscipit, at pellentesque lacus pharetra.</p>
+                <p>ik houd van motten in mn oude jas. In ac libero vitae erat lacinia consectetur non sit amet dui. Cras ligula lectus, pharetra sed erat vitae, egestas rhoncus dolor. Curabitur a nisl vitae lorem convallis gravida. Donec blandit sed dui quis rutrum. Donec id elit tortor. Integer dignissim malesuada porttitor. Donec porta erat et mauris suscipit, at pellentesque lacus pharetra.</p>
+            </div>
+            <div class="col-md-2"></div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col butterfly-background">
+            </div>
+        </div>
+    </div>
+</section>
 <!-- footer section -->
 <footer class="container-fluid fixed-bottom">
     <div class="row footer-background">
