--- a/recepten.html
+++ b/recepten.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 <!-- Navigation bar -->
-<div class="row container-fluid">
+<nav class="row container-fluid">
     <div class="col-12 nav-background">
-        <nav class="navbar navbar-expand-md fixed-top navbar-light bg-light">
+        <div class="navbar navbar-expand-md fixed-top navbar-light bg-light">
         <a class="navbar-brand text-white" href="index.html"><h1>Nomnivore</h1> </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -32,11 +32,15 @@
             </li>
             </ul>
         </div>
-        </nav>
     </div>
-</div>
-<!-- recipe section -->
-
+    </div>
+</nav>
+<!-- main content section -->
+<section class="container">
+<!-- recipe 1 -->
+<!-- recipe 2 -->
+<!-- recipe 3 -->
+</section>
 <!-- footer section -->
 <footer class="container-fluid fixed-bottom">
     <div class="row footer-background">
