Added recipe card.

--- a/recepten.html
+++ b/recepten.html
@@ -38,6 +38,69 @@
 <!-- main content section -->
 <section class="container">
 <!-- recipe 1 -->
+<div class="row">
+    <div class="col-md-2"></div>
+    <div class="col-md-8 recipe-section">
+        <div class="row">
+            <div class="col"><h2 class="recipe-title">Verjaardags taart</h2></div>
+        </div>
+        <div class="row">
+            <div class="col-md-4 recipe-pic bombes"></div>
+            <div class="col-md-8 ingredients">
+                <div class="row"><h3>Ingrediënten:</h3></div>
+                <div class="row">
+                    <div class="col">
+                        <ul class="list-group ingredient-list">
+                            <li class="list-group-item">bloem</li>
+                            <li class="list-group-item">boter</li>
+                            <li class="list-group-item">dingen</li>
+                            <li class="list-group-item">chocolade</li>
+                            <li class="list-group-item">boter</li>
+                            <li class="list-group-item">dingen</li>
+                            <li class="list-group-item">dingen</li>
+                        </ul>
+                    </div>
+                    <div class="col">
+                        <ul class="list-group ingredient-list">
+                            <li class="list-group-item">bloem</li>
+                            <li class="list-group-item">boter</li>
+                            <li class="list-group-item">dingen</li>
+                            <li class="list-group-item">chocolade</li>
+                            <li class="list-group-item">boter</li>
+                            <li class="list-group-item">dingen</li>
+                            <li class="list-group-item">dingen</li>
+                        </ul>
+                    </div>
+            </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div class="row">
+                    <div class="col bereiding-titel">
+                        <h3>Bereidingswijze:</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col bereiding-text">
+                        <ol>
+                            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ante turpis,
+                                 eleifend vel pretium eu, tempus at eros. Nunc vehicula, massa non volutpat mattis, metus.
+                            </li>
+                            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ante turpis,
+                                 eleifend vel pretium eu, tempus at eros. Nunc vehicula, massa non volutpat mattis, metus.
+                            </li>
+                            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ante turpis,
+                                 eleifend vel pretium eu, tempus at eros. Nunc vehicula, massa non volutpat mattis, metus.
+                            </li>
+                        </ol>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-2"></div>
+</div>
 <!-- recipe 2 -->
 <!-- recipe 3 -->
 </section>
