--- a/recepten.html
+++ b/recepten.html
@@ -39,13 +39,14 @@
 <section class="container">
 <!-- recipe 1 -->
 <div class="row">
-    <div class="col-md-2"></div>
-    <div class="col-md-8 recipe-section">
+    <div class="col-md-6 recipe-section">
         <div class="row">
-            <div class="col"><h2 class="recipe-title">Verjaardags taart</h2></div>
+            <div class="col"><h2 class="recipe-title">Verjaardags taart</h2><hr></div>
         </div>
         <div class="row">
-            <div class="col-md-4 recipe-pic bombes"></div>
+            <div class="col-md-4">
+                <img src="assets/images/choco-bombes.png" class="img-fluid" alt="chocolade bombes">
+            </div>
             <div class="col-md-8 ingredients">
                 <div class="row"><h3>Ingrediënten:</h3></div>
                 <div class="row">
@@ -78,7 +79,7 @@
             <div class="col">
                 <div class="row">
                     <div class="col bereiding-titel">
-                        <h3>Bereidingswijze:</h3>
+                        <hr><h3>Bereidingswijze:</h3>
                     </div>
                 </div>
                 <div class="row">
@@ -99,10 +100,195 @@
             </div>
         </div>
     </div>
-    <div class="col-md-2"></div>
+    <!-- recipe 2 -->
+    <div class="col-md-6 recipe-section">
+        <div class="row">
+            <div class="col"><h2 class="recipe-title">Verjaardags taart</h2><hr></div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <img src="assets/images/choco-bombes.png" class="img-fluid" alt="chocolade bombes">
+            </div>
+            <div class="col-md-8 ingredients">
+                <div class="row"><h3>Ingrediënten:</h3></div>
+                <div class="row">
+                    <div class="col">
+                        <ul class="list-group ingredient-list">
+                            <li class="list-group-item">bloem</li>
+                            <li class="list-group-item">boter</li>
+                            <li class="list-group-item">dingen</li>
+                            <li class="list-group-item">chocolade</li>
+                            <li class="list-group-item">boter</li>
+                            <li class="list-group-item">dingen</li>
+                            <li class="list-group-item">dingen</li>
+                        </ul>
+                    </div>
+                    <div class="col">
+                        <ul class="list-group ingredient-list">
+                            <li class="list-group-item">bloem</li>
+                            <li class="list-group-item">boter</li>
+                            <li class="list-group-item">dingen</li>
+                            <li class="list-group-item">chocolade</li>
+                            <li class="list-group-item">boter</li>
+                            <li class="list-group-item">dingen</li>
+                            <li class="list-group-item">dingen</li>
+                        </ul>
+                    </div>
+            </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div class="row">
+                    <div class="col bereiding-titel">
+                        <hr><h3>Bereidingswijze:</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col bereiding-text">
+                        <ol>
+                            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ante turpis,
+                                 eleifend vel pretium eu, tempus at eros. Nunc vehicula, massa non volutpat mattis, metus.
+                            </li>
+                            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ante turpis,
+                                 eleifend vel pretium eu, tempus at eros. Nunc vehicula, massa non volutpat mattis, metus.
+                            </li>
+                            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ante turpis,
+                                 eleifend vel pretium eu, tempus at eros. Nunc vehicula, massa non volutpat mattis, metus.
+                            </li>
+                        </ol>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-<!-- recipe 2 -->
 <!-- recipe 3 -->
+<div class="row">
+    <div class="col-md-6 recipe-section">
+            <div class="row">
+                <div class="col"><h2 class="recipe-title">Verjaardags taart</h2><hr></div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="assets/images/choco-bombes.png" class="img-fluid" alt="chocolade bombes">
+                </div>
+                <div class="col-md-8 ingredients">
+                    <div class="row"><h3>Ingrediënten:</h3></div>
+                    <div class="row">
+                        <div class="col">
+                            <ul class="list-group ingredient-list">
+                                <li class="list-group-item">bloem</li>
+                                <li class="list-group-item">boter</li>
+                                <li class="list-group-item">dingen</li>
+                                <li class="list-group-item">chocolade</li>
+                                <li class="list-group-item">boter</li>
+                                <li class="list-group-item">dingen</li>
+                                <li class="list-group-item">dingen</li>
+                            </ul>
+                        </div>
+                        <div class="col">
+                            <ul class="list-group ingredient-list">
+                                <li class="list-group-item">bloem</li>
+                                <li class="list-group-item">boter</li>
+                                <li class="list-group-item">dingen</li>
+                                <li class="list-group-item">chocolade</li>
+                                <li class="list-group-item">boter</li>
+                                <li class="list-group-item">dingen</li>
+                                <li class="list-group-item">dingen</li>
+                            </ul>
+                        </div>
+                </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <div class="row">
+                        <div class="col bereiding-titel">
+                            <hr><h3>Bereidingswijze:</h3>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col bereiding-text">
+                            <ol>
+                                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ante turpis,
+                                    eleifend vel pretium eu, tempus at eros. Nunc vehicula, massa non volutpat mattis, metus.
+                                </li>
+                                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ante turpis,
+                                    eleifend vel pretium eu, tempus at eros. Nunc vehicula, massa non volutpat mattis, metus.
+                                </li>
+                                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ante turpis,
+                                    eleifend vel pretium eu, tempus at eros. Nunc vehicula, massa non volutpat mattis, metus.
+                                </li>
+                            </ol>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </div>
+    <!-- recipe 4 -->
+    <div class="col-md-6 recipe-section">
+        <div class="row">
+            <div class="col"><h2 class="recipe-title">Verjaardags taart</h2><hr></div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <img src="assets/images/choco-bombes.png" class="img-fluid" alt="chocolade bombes">
+            </div>
+            <div class="col-md-8 ingredients">
+                <div class="row"><h3>Ingrediënten:</h3></div>
+                <div class="row">
+                    <div class="col">
+                        <ul class="list-group ingredient-list">
+                            <li class="list-group-item">bloem</li>
+                            <li class="list-group-item">boter</li>
+                            <li class="list-group-item">dingen</li>
+                            <li class="list-group-item">chocolade</li>
+                            <li class="list-group-item">boter</li>
+                            <li class="list-group-item">dingen</li>
+                            <li class="list-group-item">dingen</li>
+                        </ul>
+                    </div>
+                    <div class="col">
+                        <ul class="list-group ingredient-list">
+                            <li class="list-group-item">bloem</li>
+                            <li class="list-group-item">boter</li>
+                            <li class="list-group-item">dingen</li>
+                            <li class="list-group-item">chocolade</li>
+                            <li class="list-group-item">boter</li>
+                            <li class="list-group-item">dingen</li>
+                            <li class="list-group-item">dingen</li>
+                        </ul>
+                    </div>
+            </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div class="row">
+                    <div class="col bereiding-titel">
+                        <hr><h3>Bereidingswijze:</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col bereiding-text">
+                        <ol>
+                            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ante turpis,
+                                 eleifend vel pretium eu, tempus at eros. Nunc vehicula, massa non volutpat mattis, metus.
+                            </li>
+                            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ante turpis,
+                                 eleifend vel pretium eu, tempus at eros. Nunc vehicula, massa non volutpat mattis, metus.
+                            </li>
+                            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ante turpis,
+                                 eleifend vel pretium eu, tempus at eros. Nunc vehicula, massa non volutpat mattis, metus.
+                            </li>
+                        </ol>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </section>
 <!-- footer section -->
 <footer class="container-fluid fixed-bottom">
