Added recipies site text, adjusted references images size and layout and added border radiuses for softer look.

--- a/over-kim.html
+++ b/over-kim.html
@@ -51,11 +51,13 @@
     <div class="container">
         <div class="row">
             <div class="col-md-2"></div>
-            <div class="col-md-8 text-block-over-kim">
-                <h2>Over mijn ervaring en opleiding</h2>
-                <p>Ik heb mijn patisserie opleiding gedaan in beverwijk. Donec vel justo velit. Nunc pulvinar dignissim aliquam. Donec at nibh ac justo pulvinar dictum ut a mi. Aenean ut nulla enim. Curabitur pretium porta ullamcorper. Vivamus ullamcorper est eu felis dignissim, a pharetra arcu vulputate. Curabitur vitae ultricies massa.</p>
-                <p>Als zelfstandig ondernemer catering bedrijf gehad. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sit amet faucibus urna, nec convallis tortor. Praesent convallis varius sodales. In ac libero vitae erat lacinia consectetur non sit amet dui. Cras ligula lectus, pharetra sed erat vitae, egestas rhoncus dolor. Curabitur a nisl vitae lorem convallis gravida. Donec blandit sed dui quis rutrum. Donec id elit tortor. Integer dignissim malesuada porttitor. Donec porta erat et mauris suscipit, at pellentesque lacus pharetra.</p>
-                <p>ik houd van motten in mn oude jas. In ac libero vitae erat lacinia consectetur non sit amet dui. Cras ligula lectus, pharetra sed erat vitae, egestas rhoncus dolor. Curabitur a nisl vitae lorem convallis gravida. Donec blandit sed dui quis rutrum. Donec id elit tortor. Integer dignissim malesuada porttitor. Donec porta erat et mauris suscipit, at pellentesque lacus pharetra.</p>
+            <div class="col-md-8">
+                <div class="col-md-12 text-block-over-kim">
+                    <h2>Over mijn ervaring en opleiding</h2>
+                    <p>Ik heb mijn patisserie opleiding gedaan in beverwijk. Donec vel justo velit. Nunc pulvinar dignissim aliquam. Donec at nibh ac justo pulvinar dictum ut a mi. Aenean ut nulla enim. Curabitur pretium porta ullamcorper. Vivamus ullamcorper est eu felis dignissim, a pharetra arcu vulputate. Curabitur vitae ultricies massa.</p>
+                    <p>Als zelfstandig ondernemer catering bedrijf gehad. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sit amet faucibus urna, nec convallis tortor. Praesent convallis varius sodales. In ac libero vitae erat lacinia consectetur non sit amet dui. Cras ligula lectus, pharetra sed erat vitae, egestas rhoncus dolor. Curabitur a nisl vitae lorem convallis gravida. Donec blandit sed dui quis rutrum. Donec id elit tortor. Integer dignissim malesuada porttitor. Donec porta erat et mauris suscipit, at pellentesque lacus pharetra.</p>
+                    <p>ik houd van motten in mn oude jas. In ac libero vitae erat lacinia consectetur non sit amet dui. Cras ligula lectus, pharetra sed erat vitae, egestas rhoncus dolor. Curabitur a nisl vitae lorem convallis gravida. Donec blandit sed dui quis rutrum. Donec id elit tortor. Integer dignissim malesuada porttitor. Donec porta erat et mauris suscipit, at pellentesque lacus pharetra.</p>
+                </div>
             </div>
             <div class="col-md-2"></div>
         </div>
