--- a/index.html
+++ b/index.html
@@ -61,29 +61,33 @@
     <!-- references-->
     <div class="container-fluid">
         <div class="row justify-content-md-center">
-            <div class="col-md-8 referentie">
-                <div class="row">
-                    <div class="col-2">
-                    <div class="referentie-logo-1"></div>
+            <div class="col-md-8">
+                <div class="col-md-12 referentie">
+                    <div class="row">
+                        <div class="col-2">
+                        <div class="referentie-logo-1"></div>
+                        </div>
+                        <div class="col-10 referentie-titel">Culinair centrum beverwijk</div>
                     </div>
-                    <div class="col-10 referentie-titel">Culinair centrum beverwijk</div>
-                </div>
-                <div class="row">
-                    <div class="col-12 referentie-text"><p>Het is altijd plezierig met kim te werken.  Ze is proffesioneel prettig in de omgang en past zich snel aan. 
-                    Een echte aanvulling aan het team.</p>
+                    <div class="row">
+                        <div class="col-12 referentie-text"><p>Het is altijd plezierig met kim te werken.  Ze is proffesioneel prettig in de omgang en past zich snel aan. 
+                        Een echte aanvulling aan het team.</p>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-md-8 referentie">
-                <div class="row">
-                    <div class="col-2">
-                    <div class="referentie-logo-2"></div>
+            <div class="col-md-8">
+                <div class="col-12 referentie">
+                    <div class="row">
+                        <div class="col-2">
+                        <div class="referentie-logo-2"></div>
+                        </div>
+                        <div class="col-10 referentie-titel">Jeroen Goossens</div>
                     </div>
-                    <div class="col-10 referentie-titel">Jeroen Goossens</div>
-                </div>
-                <div class="row">
-                    <div class="col-12 referentie-text"><p>Ik stel altijd hoge eisen, aan mijn producten en mijn personeel.
-                    Met Kim hoef ik me over beide nooit zorgen te maken.</p>
+                    <div class="row">
+                        <div class="col-12 referentie-text"><p>Ik stel altijd hoge eisen, aan mijn producten en mijn personeel.
+                        Met Kim hoef ik me over beide nooit zorgen te maken.</p>
+                        </div>
                     </div>
                 </div>
             </div>
