--- a/recepten.html
+++ b/recepten.html
@@ -40,11 +40,12 @@
     <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-8">
-            <div class="col-12 recepe-text">
+            <div class="col-12 recipe-text">
                 <h1>Hier vindt je de lekkerste recepten van Nomnivore.</h1>
                 <p>Als freelance kok en pattisier deel ik graag mijn kennis. Wil je ook zulke lekkere patisserie maken of op de zaak verkopen? 
-                Neem contact met me op of probeer het zelf1 hier vindt je regelmatig nieuwe recepten dus ik zie je graag hier terug!</p>
+                Neem contact met me op of probeer het zelf. Hier vindt je regelmatig nieuwe recepten dus ik zie je graag hier terug!</p>
             </div>
+            <div class="col-md-12 profile-pic-small"></div>
         </div>
         <div class="col-md-2"></div>
     </div>
