Added testing.md file, updated readme.md, corrected some code from dutch to english.

--- a/index.html
+++ b/index.html
@@ -62,30 +62,30 @@
     <div class="container-fluid">
         <div class="row justify-content-md-center">
             <div class="col-md-8">
-                <div class="col-md-12 referentie">
+                <div class="col-md-12 reference">
                     <div class="row">
                         <div class="col-2">
-                        <div class="referentie-logo-1"></div>
+                        <div class="reference-logo-1"></div>
                         </div>
-                        <div class="col-10 referentie-titel">Culinair centrum beverwijk</div>
+                        <div class="col-10 reference-titel"><h1>Culinair centrum beverwijk</h1></div>
                     </div>
                     <div class="row">
-                        <div class="col-12 referentie-text"><p>Het is altijd plezierig met kim te werken.  Ze is proffesioneel prettig in de omgang en past zich snel aan. 
+                        <div class="col-12 reference-text"><p>Het is altijd plezierig met kim te werken.  Ze is proffesioneel prettig in de omgang en past zich snel aan. 
                         Een echte aanvulling aan het team.</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-md-8">
-                <div class="col-12 referentie">
+                <div class="col-12 reference">
                     <div class="row">
                         <div class="col-2">
-                        <div class="referentie-logo-2"></div>
+                        <div class="reference-logo-2"></div>
                         </div>
-                        <div class="col-10 referentie-titel">Jeroen Goossens</div>
+                        <div class="col-10 reference-titel"><h1>Jeroen Goossens</h1></div>
                     </div>
                     <div class="row">
-                        <div class="col-12 referentie-text"><p>Ik stel altijd hoge eisen, aan mijn producten en mijn personeel.
+                        <div class="col-12 reference-text"><p>Ik stel altijd hoge eisen, aan mijn producten en mijn personeel.
                         Met Kim hoef ik me over beide nooit zorgen te maken.</p>
                         </div>
                     </div>
