Added contact form, Corrected indentation on media queries

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,6 +12,7 @@
 <nav class="container-fluid nav-background">
     <div class="row">
         <div class="col-12">
+            <!-- Navigation bar Copied and adjusted navbar from the bootstrap website -->
             <div class="navbar navbar-expand-md fixed-top navbar-light bg-light">
             <a class="navbar-brand current-link" href="index.html"><h1>Nomnivore</h1> </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -104,6 +105,7 @@
     <div class="row footer-background">
         <div class="col copyright"><a target="_blank" href="https://www.linkedin.com/in/joris-dominicus-adam-paardekooper-overman-536b505a/">&copy; Joris Paardekooper</a></div>
         <div class="col-xs-auto">
+            <!--section with social icons code came from the cv assignment lesson in the code institute LMS -->
             <ul class="list-inline social-links">
             <li class="list-inline-item">
               <a
