--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +11,7 @@
 <!-- Navigation bar -->
 <nav class="row container-fluid">
     <div class="col-12 nav-background">
+        <!-- Navigation bar Copied and adjusted navbar from the bootstrap website -->
         <div class="navbar navbar-expand-md fixed-top navbar-light bg-light">
         <a class="navbar-brand text-white" href="index.html"><h1>Nomnivore</h1> </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,14 +37,37 @@
     </div>
 </nav>
 <!-- main content section -->
-
+<div class="container">
+    <div class="row">
+        <div class="col contact-title">
+            <h1>Kies de wijze van contact opnemen die uw voorkeur heeft:</h1>
+        </div>
+    </div>
+</div>
 <!-- contact form -->
-
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <div class="col-12 contact-form">
+            <form>
+                <label for="name">Naam:</label><br>
+                <input type="text" id="fname" name="fname"><br>
+                <label for="lname">Email:</label><br>
+                <input type="email" id="email" name="email"><br>
+                <label for="name">Korte omschrijving van uw vraag.</label><br>
+                <textarea id="message" name="message"></textarea><br><br>
+                <input type="submit" value="Send" class="send-button">
+            </form>
+            </div>
+        </div>
+    </div>
+</div>
 <!-- footer section -->
 <footer class="container-fluid fixed-bottom">
     <div class="row footer-background">
         <div class="col copyright"><a target="_blank" href="https://www.linkedin.com/in/joris-dominicus-adam-paardekooper-overman-536b505a/">&copy; Joris Paardekooper</a></div>
         <div class="col-xs-auto">
+            <!--section with social icons code came from the cv assignment lesson in the code institute LMS -->
             <ul class="list-inline social-links">
             <li class="list-inline-item">
               <a
