--- a/over-kim.html
+++ b/over-kim.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +11,7 @@
 <!-- Navigation bar -->
 <nav class="row container-fluid">
     <div class="col-12 nav-background">
+        <!-- Navigation bar Copied and adjusted navbar from the bootstrap website -->
         <div class="navbar navbar-expand-md fixed-top navbar-light bg-light">
         <a class="navbar-brand text-white" href="index.html"><h1>Nomnivore</h1> </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -74,6 +75,7 @@
     <div class="row footer-background">
         <div class="col copyright"><a target="_blank" href="https://www.linkedin.com/in/joris-dominicus-adam-paardekooper-overman-536b505a/">&copy; Joris Paardekooper</a></div>
         <div class="col-xs-auto">
+            <!--section with social icons code came from the cv assignment lesson in the code institute LMS -->
             <ul class="list-inline social-links">
             <li class="list-inline-item">
               <a
