Added info and background to contact page.

--- a/contact.html
+++ b/contact.html
@@ -37,11 +37,51 @@
     </div>
 </nav>
 <!-- main content section -->
-<div class="container">
-    <div class="row">
-        <div class="col contact-title">
+<!-- social title -->
+<div class="container text-center">
+    <div class="row justify-content-center">
+        <div class="col-md-8 contact-title">
             <h1>Kies de wijze van contact opnemen die uw voorkeur heeft:</h1>
         </div>
+    </div>
+<!-- social icons -->
+    <div class="row">
+        <div class="col">
+            <!--section with social icons code came from the cv assignment lesson in the code institute LMS -->
+            <ul class="list-inline social-contact">
+            <li class="list-inline-item">
+              <a
+                target="_blank"
+                href="https://www.facebook.com/Nomnivore-105839921382834"
+              >
+                <i class="fa fa-facebook facebook-logo" aria-hidden="true"></i>
+                <span class="sr-only">Facebook</span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a target="_blank" href="https://www.instagram.com/kimvnleeuwen/">
+                <i class="fa fa-instagram" aria-hidden="true"></i>
+                <span class="sr-only">Instagram</span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a
+                target="_blank"
+                href="https://www.linkedin.com/in/kimberley-van-leeuwen-33657998/"
+              >
+                <i class="fa fa-linkedin" aria-hidden="true"></i>
+                <span class="sr-only">Linkedin</span>
+              </a>
+            </li>
+            </ul>
+        </div>
+    </div>
+<!-- telephone number -->
+    <div class="row">
+        <div class="col-12">
+                <a class="phone-number" href="tel:0640168572"> Tel: 06 - 40168572</a>
+        </div>
+        <div class="col-12 profile-pic-small"></div>
     </div>
 </div>
 <!-- contact form -->
@@ -61,7 +101,29 @@
             </div>
         </div>
     </div>
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <div class="col-12 text-center">
+                <p class="contact-info">
+                    Kimberley van Leeuwen<br>
+                    Dekkerstraat 31<br>
+                    1944VA Beverwijk<br>
+                    kvk 60639393<br>
+                    kim@nomnivore.nl<br>
+                    06 - 40168572<br>
+                </p>
+            </div>
+        </div>
+    </div>
 </div>
+<!-- social background -->
+<div class="container-fluid">
+        <div class="row">
+            <div class="col contact-background">
+            </div>
+        </div>
+</div>
+
 <!-- footer section -->
 <footer class="container-fluid fixed-bottom">
     <div class="row footer-background">
