--- a/over-kim.html
+++ b/over-kim.html
@@ -65,7 +65,7 @@
     </div>
     <div class="container-fluid">
         <div class="row">
-            <div class="col butterfly-background">
+            <div class="col over-kim-background">
             </div>
         </div>
     </div>
