Added welcome text. Minor layout adjustments regarding backgrounds.

--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,8 @@
         <div class="col-12">
                 <a class="phone-number" href="tel:0640168572"> Tel: 06 - 40168572</a>
         </div>
-        <div class="col-12 profile-pic-small"></div>
+<!-- profile pic -->
+        <div class="col-12 profile-pic-contact"></div>
     </div>
 </div>
 <!-- contact form -->
