--- a/index.html
+++ b/index.html
@@ -58,6 +58,16 @@
                 <a class="contact-button" href="contact.html">Contact</a> 
             </div>
         </div>
+        <div class="row justify-content-center">
+            <div class="col-md-8 welcome-text">
+                <h2 class="text-center">Uw freelance kok is slechts één klik verwijdert</h2>
+                <p>
+                    Ik ben Kimberly van Leeuwen, (N)omnivore in hart en nieren. 
+                    Als Freelance chef en pattisier ga ik graag in uw bedrijf aan de slag. 
+                    Voor het ontwikkelen van nieuwe producten, het draaien van partijen of het geven van cursussen.
+                </p>
+            </div>
+        </div>
     </div>
     <!-- references-->
     <div class="container-fluid">
